--- a/MarkdownViewer/MainForm.resx
+++ b/MarkdownViewer/MainForm.resx
@@ -120,4 +120,81 @@
   <metadata name="menuTop.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAB2FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YU
+        Xf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YU
+        Xf92FF3/dhRd/3YUXf+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP92FF3/dhRd/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/3YUXf92FF3/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/dhRd/3YUXf+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT//////5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP92FF3/dhRd/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/////////////////5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/3YUXf92FF3/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP///////////////////////////5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/dhRd/3YU
+        Xf+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/////////////////lCh0////
+        /////////////5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP92FF3/dhRd/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/////////////////5Qo
+        dP+UKHT/lCh0/////////////////5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/3YUXf92FF3/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP//////////////
+        //+UKHT/lCh0/5QodP+UKHT/lCh0/////////////////5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/dhRd/3YUXf+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/////////
+        ////////lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/////////////////5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP92FF3/dhRd/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0////
+        /////////////5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/////////////////5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/3YUXf92FF3/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP////////////////+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0////
+        /////////////5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/dhRd/3YUXf+UKHT/lCh0////
+        /////////////////////////////////////////////5QodP+UKHT/lCh0/5QodP+UKHT/////////
+        ////////////////////////////////////////lCh0/5QodP+UKHT/lCh0/5QodP92FF3/dhRd/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/3YU
+        Xf92FF3/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/dhRd/3YUXf+UKHT/lCh0////////////lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/////////
+        //+UKHT/lCh0/5QodP//////////////////////////////////////lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP92FF3/dhRd/5QodP+UKHT///////////+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP///////////5QodP+UKHT/lCh0/////////////////////////////////////////////////5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/3YUXf92FF3/lCh0/5QodP////////////////+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/////////////////5QodP+UKHT/lCh0////////////lCh0/5QodP+UKHT/////////
+        /////////////5QodP+UKHT/lCh0/5QodP+UKHT/dhRd/3YUXf+UKHT/lCh0/5QodP///////////5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0////////////lCh0/5QodP+UKHT///////////+UKHT/lCh0/5Qo
+        dP+UKHT//////////////////////5QodP+UKHT/lCh0/5QodP92FF3/dhRd/5QodP+UKHT/lCh0////
+        ////////lCh0/5QodP///////////5QodP+UKHT///////////+UKHT/lCh0/5QodP//////////////
+        //+UKHT/lCh0/5QodP+UKHT/////////////////lCh0/5QodP+UKHT/lCh0/3YUXf92FF3/lCh0/5Qo
+        dP+UKHT///////////+UKHT/lCh0////////////lCh0/5QodP///////////5QodP+UKHT/lCh0////
+        /////////////5QodP+UKHT/lCh0/5QodP+UKHT/////////////////lCh0/5QodP+UKHT/dhRd/3YU
+        Xf+UKHT/lCh0/5QodP///////////5QodP+UKHT/////////////////lCh0////////////lCh0/5Qo
+        dP+UKHT/////////////////lCh0/5QodP+UKHT/lCh0/5QodP////////////////+UKHT/lCh0/5Qo
+        dP92FF3/dhRd/5QodP+UKHT/lCh0/5QodP///////////5QodP//////lCh0//////+UKHT/////////
+        ////////lCh0/5QodP+UKHT///////////+UKHT/lCh0/5QodP+UKHT/lCh0/////////////////5Qo
+        dP+UKHT/lCh0/3YUXf92FF3/lCh0/5QodP+UKHT/lCh0////////////lCh0//////+UKHT/////////
+        //+UKHT///////////+UKHT/lCh0/5QodP///////////5QodP+UKHT/lCh0/5QodP+UKHT/////////
+        ////////lCh0/5QodP+UKHT/dhRd/3YUXf+UKHT/lCh0/5QodP+UKHT//////////////////////5Qo
+        dP+UKHT//////5QodP///////////5QodP+UKHT/lCh0/////////////////5QodP+UKHT/lCh0/5Qo
+        dP////////////////+UKHT/lCh0/5QodP92FF3/dhRd/5QodP+UKHT/lCh0/5QodP//////////////
+        ////////lCh0/5QodP//////////////////////lCh0/5QodP+UKHT/////////////////lCh0/5Qo
+        dP+UKHT//////////////////////5QodP+UKHT/lCh0/3YUXf92FF3/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP////////////////+UKHT/lCh0/5QodP////////////////+UKHT/lCh0/5QodP+UKHT/////////
+        //////////////////////////////////+UKHT/lCh0/5QodP+UKHT/dhRd/3YUXf+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/////////////////5QodP+UKHT/lCh0/////////////////5QodP+UKHT/lCh0/5Qo
+        dP//////////////////////////////////////lCh0/5QodP+UKHT/lCh0/5QodP92FF3/dhRd/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/3YU
+        Xf92FF3/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5QodP+UKHT/lCh0/5Qo
+        dP+UKHT/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YU
+        Xf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YUXf92FF3/dhRd/3YU
+        Xf92FF3/dhRd/3YUXf92FF3/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
